# PlasticBand

./: .gitignore  .pre-commit-config.yaml  README.md
Docs/: README.md
Docs/Base Reports/: PS3.md  PS4.md  README.md  Xbox 360.md
Docs/Controller Communication Basics/: PS3 Instruments.md  PS3.md  PS4 Instruments.md  Xbox 360.md  Xbox One.md
Docs/Descriptor Dumps/Guitar Praise/: USB Descriptor.txt
Docs/Descriptor Dumps/HID/: Guitar Praise HID Descriptor.txt  PDP Riffmaster PS5 HID Descriptor.txt  PS3 Rock Band 2 Drums HID Descriptor.txt  PS3 World Tour Drums HID Descriptor.txt  PS3 World Tour Guitar Descriptors.txt  PS3 World Tour Guitar HID Descriptor.txt  PS4 Riffmaster HID Descriptor.txt  PS4 Riffmaster USB Descriptor.txt  PS5 Riffmaster HID Descriptor.txt  PS5 Riffmaster USB Descriptor.txt  (+1 more)
Docs/Other/: Portals.txt  Raphnet.md  Rock Band MIDI Pro Adapters.md  Santroller.md  Xbox 360 Rock Band Stage Kit.md  Xbox One RB4 Wired Legacy Adapter.md  Xbox One RB4 Wireless Legacy Adapter.md  device_list.json  device_list.xml
Docs/_Templates/: HID Device Base.md  PS3 Base.md  PS4 Base.md  Xbox 360 Base.md  Xbox One Base.md
Tools/: Cargo.toml  PlasticBand.Tools.sln  README.md  deny.toml  rustfmt.toml
Tools/GipReportTool/: GipReportTool.csproj  README.md
Tools/HidReportTool/: LICENSE  README.md
Tools/XusbReportTool/: README.md
Tools/crates/gip-metadata-compiler/: Cargo.toml
Tools/crates/gip-metadata-compiler/docs/: example_metadata.json  gip_metadata_schema.json
Tools/crates/gip-metadata-compiler/src/: binary.rs  lib.rs  main.rs
(+124 files in other folders)
