[package]
name = "gip-metadata-compiler"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
clap = "4.5.28"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
uuid = { version = "1.13.1", features = ["serde"] }
