[package]
name = "gip-metadata-compiler"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.95"
byteorder = "1.5.0"
clap = { version = "4.5.28", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
uuid = { version = "1.13.1", features = ["serde"] }
